DuPont DevSB/src/objects/Opportunity_Company__c.object
<CustomObject>
    <description>Companies related to this opportunity</description>
    <fields>
        <fullName>Company_Role__c</fullName>
        <description>Role this company is playing in this opportunity</description>
        <label>Company Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Converter</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Development Customer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Indirect Customer</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Partner-Fabricator</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>System Manufacturer</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company associated with this Opportunity</description>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunity_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main Contact of this Company at this Opportunity</description>
        <inlineHelpText>Main Contact of this Company at this Opportunity</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity-Companies</relationshipLabel>
        <relationshipName>R00N30000001qJPpEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detail description of this Opportunity-Company</description>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_off_List__c</fullName>
        <description>Discout Off DuPont List price this partner will get specifically for this opportunity</description>
        <label>Discount off List %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Main__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Main Company Relationship for this opportunity</description>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Oppoortunity this Company is related to</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Company</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% off List Price</fullName>
                </value>
                <value>
                    <fullName>% off Usual Price</fullName>
                </value>
                <value>
                    <fullName>Amount per UOM</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fCountry__c</fullName>
        <description>Country from the associated Account</description>
        <formula>TEXT( Company__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Country from the associated Account</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fRegion__c</fullName>
        <description>The GeoRegion from the associated Account</description>
        <formula>TEXT( Company__r.Region__c)</formula>
        <inlineHelpText>The GeoRegion from the associated Account</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSubRegion__c</fullName>
        <description>Geo SubRegion from the associated Account</description>
        <formula>Company__r.SubRegion__c</formula>
        <inlineHelpText>Geo SubRegion from the associated Account</inlineHelpText>
        <label>SubRegion</label>
        <type>Text</type>
    </fields>
    <label>Opportunity-Company</label>
    <listViews>
        <fullName>Kwangjin_Ind1</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>Kwangjin Ind</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kwangjin_Ind2</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>Kwangjin Ind</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebatesprovided</fullName>
        <columns>Company__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Rebate_Type__c</columns>
        <columns>Rebate__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_Company__c.DPT_IPPEMEA</value>
        </filters>
        <label>Rebates provided</label>
        <language>en_US</language>
        <sharedTo>
            <group>DPTEMEA</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OPCO{YY}{MM}-{0000}</displayFormat>
        <label>OPCO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity-Companies</pluralLabel>
    <recordTypes>
        <fullName>Construction</fullName>
        <active>true</active>
        <description>Construction Relationships</description>
        <label>Construction</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_IPPEMEA</fullName>
        <active>true</active>
        <description>DPT - DPP EMEA</description>
        <label>DPT-IPP EMEA</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_Standard</fullName>
        <active>true</active>
        <description>DPT - IPP NA Companies (i.e. competitors, etc.) related to this Opportunity</description>
        <label>DPT Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>OneDuPont</fullName>
        <active>true</active>
        <description>Main standard way to document the role of a company at a given opportunity</description>
        <label>OneDuPont</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>